[package]
name = "scrap-gamblers"
version = "0.1.0"
edition = "2024"

[features]
# Enable for faster native dev builds only — breaks WASM
dev = ["bevy/dynamic_linking", "bevy/bevy_remote"]

[dependencies]
bevy    = { version = "0.18", features = ["webgl2"] }
reqwest = { version = "0.12", features = ["json"] }
serde   = { version = "1", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "s"
lto = true
